--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,36 +1,62 @@
-# This is a basic workflow to help you get started with Actions
+# Custom workflow
 
-name: CI
+name: Custom_code_build
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      # Clone additional repositories and get external libraries from Artifactory
+      - name: Clone repos and get libraries
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          git clone https://${{secrets.CLONE_TOKEN}}@github.com/vortex75-c64/cli_common_eai_nso
+          mv cli_common_eai_nso/* .
+          rmdir cli_common_eai_nso
+          git clone https://${{secrets.CLONE_TOKEN}}@github.com/vortex75-c64/cli_common_nso
+          git clone https://${{secrets.CLONE_TOKEN}}@github.com/vortex75-c64/cli_common_nso_datanet
+          curl -H "X-JFrog-Art-Api:${{secrets.ARTIFACT_TOKEN}}" -O "https://vortex75c64.jfrog.io/artifactory/binary-generic-local/library.zip"
+          unzip library.zip
+
+      # Setup Java 11
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+          cache: maven
+
+      # Build cli_common_nso
+      - name: Build cli_common_nso with Maven
+        run: |
+          cd cli_common_nso
+          mvn validate clean install
+
+      # Build cli_common_nso_datanet
+      - name: Build cli_common_nso_datanet with Maven
+        run: |
+          cd cli_common_nso_datanet
+          mvn validate clean install
+
+      # Build cli_common_eai_nso
+      - name: Build cli_common_eai_nso with Ant
+        run: |
+          ant -noclasspath -buildfile build.xml build_production
+
+      # Check the generated artifact, assign the version and publish to Artifactory
+      - name: Store versioned artifacts into Artifactory
+        run: |
+          ls -l library
+          mkdir deploy
+          cp library/nso_eai_client.jar deploy/nso_eai_client_${GITHUB_RUN_NUMBER}.jar
+          ls -l deploy
+          curl -H "X-JFrog-Art-Api:${{secrets.ARTIFACT_TOKEN}}" -T deploy/nso_eai_client_${GITHUB_RUN_NUMBER}.jar "https://vortex75c64.jfrog.io/artifactory/binary-generic-local/deploy/nso_eai_client_${GITHUB_RUN_NUMBER}.jar"
