--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,7 +63,7 @@ jobs:
 
   release:
     name: "Release"
-    runs on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: marvinpinto/action-automatic-releases@v1.2.1
         with:
